
* Pure/Syntax: inner syntax includes (*(*nested*) comments*).

* Pure/Syntax: pretty pinter now supports unbreakable blocks,
  specified in mixfix annotations as "(00...)".

* Pure/Syntax: 'advanced' translation functions (parse_translation
  etc.) may depend on the signature of the theory context being
  presently used for parsing/printing, see also isar-ref manual.

* Pure/Simplifier: simplification procedures may now take the current
  simpset into account (cf. Simplifier.simproc(_i) / mk_simproc
  interface), which is very useful for calling the Simplifier
  recursively.  Minor INCOMPATIBILITY: the 'prems' argument of
  simprocs is gone -- use prems_of_ss on the simpset instead.
  Moreover, the low-level mk_simproc no longer applies Logic.varify
  internally, to allow for use in a context of fixed variables.

* Isar debugging: new reference Toplevel.debug; default false.  Set to
  make printing of exceptions THM, TERM, TYPE and THEORY more verbose.
  
* Locales:
  - "includes" disallowed in declaration of named locales (command "locale").
  - Fixed parameter management in theorem generation for goals with "includes".
    INCOMPATIBILITY: rarely, the generated theorem statement is different.

* Locales:  new commands for the interpretation of locale expressions
  in theories (interpretation) and proof contexts (interpret).  These take an
  instantiation of the locale parameters and compute proof obligations from
  the instantiated specification.  After the obligations have been discharged,
  the instantiated theorems of the locale are added to the theory or proof
  context.  Interpretation is smart in that already active interpretations
  do not occur in proof obligations, neither are instantiated theorems stored
  in duplicate.
  Use print_interps to inspect active interpretations of a particular locale.
  For details, see the Isar Reference manual.

* Locales: proper static binding of attribute syntax -- i.e. types /